UF-16781: Make spring filter optional
